--- a/_includes/cards.html
+++ b/_includes/cards.html
@@ -1,4 +1,4 @@
-<div class="card-container-wrapper">
+<!-- <div class="card-container-wrapper">
   <p class="heading-main">Explore OpenSearch documentation</p>
   <div class="card-container">
     <div class="card">
@@ -35,3 +35,4 @@
 </div>
 
 
+ -->
