--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,9 +1,9 @@
 @mixin gradient-open-sky {
-    background: linear-gradient(180deg, #E1FAFF 0%, #98E3F4 48.15%, #00B7E0 100%);
+    background: linear-gradient(180deg, #e1fff3 0%, #98f4dc 48.15%, #00e05d 100%);
 }
 
 @mixin gradient-deep-blue-sea {
-    background: linear-gradient(180deg, #016BA7 0%, #011C2D 97.92%);
+    background: linear-gradient(180deg, #0fa701 0%, #012d20 97.92%);
 }
 
 @mixin thick-edge-left {
