--- a/_sass/color_schemes/opensearch.scss
+++ b/_sass/color_schemes/opensearch.scss
@@ -2,7 +2,7 @@
 // Brand colors
 //
 
-$blue-300: #0055A6;
+$blue-300: green;//#0055A6;
 $blue-200: #005EB8; // Pacific Blue
 $blue-100: #337EC6;
 $blue-000: #80AFDC;
@@ -52,8 +52,8 @@ $red-100: #DD4A69;
 $red-200: #AC3952;
 $red-300: #7B293B;
 
-$light-theme-navigation-background: #F1FBFF;
-$primary-deep-blue-sea-s3: #001E30;
+$light-theme-navigation-background: lightgreen;// #F1FBFF;
+$primary-deep-blue-sea-s3: #1c3000;
 $primary-deep-blue-sea-t1: #2C5E7A;
 $primary-open-sky: #00A3E0;
 $primary-open-sky-s3: #003551;
