--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1034,7 +1034,7 @@ body {
 }
 
 @mixin gradient-deep-blue-sea {
-  background: linear-gradient(180deg, #016BA7 0%, #011C2D 97.92%);
+  background: linear-gradient(180deg, #01a76d 0%, #013a1a 97.92%);
 }
 
 @mixin header-level3($color: $primary-open-sky-s1) {
