--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -1,4 +1,4 @@
-<div class="div-feedback">
+<!--<div class="div-feedback">
     <div class="feedback-header">WAS THIS PAGE HELPFUL?</div>
     <div class="feedback-radio-div">
         <input id="yes" type="radio" name="radio-button" value="yes" class="feedback-button">
@@ -13,4 +13,4 @@
     <p class="text-small text-grey-dk-100 hidden" id="thank-you">Thank you for your feedback!</p>
     <p class="text-small text-grey-dk-100">Have a question? <a class="feedback-forum" target="_blank" href="https://forum.opensearch.org/">Ask us on the OpenSearch forum</a>.</p>
     <p class="text-small text-grey-dk-100">Want to contribute? <a class="feedback-edit" target="_blank" href="https://github.com/opensearch-project/documentation-website/edit/main/{{ page.path }}">Edit this page</a> or <a class="feedback-issue" target="_blank" href="https://github.com/opensearch-project/documentation-website/issues/new?assignees=&labels=untriaged&template=issue_template.md&title=%5BDOC%5D">create an issue</a>.</p>
-</div>
+</div>-->
