--- a/_sass/color_schemes/odfe.scss
+++ b/_sass/color_schemes/odfe.scss
@@ -58,7 +58,7 @@ Warm Node #FEA501
 */
 
 $body-background-color: $white;
-$sidebar-color: $grey-lt-000;
+$sidebar-color: #e0f2f1;
 $code-background-color: $grey-lt-000;
 
 $body-text-color: $grey-dk-200;
