--- a/_sass/_navigation-header.scss
+++ b/_sass/_navigation-header.scss
@@ -1,6 +1,6 @@
 $header-banner-min-width: 1019px;
 $header-banner-mobile-breakpoint: 1018px;
-$header-logo-max-left: 80px;
+$header-logo-max-left: 40px;
 $header-navigation-max-right: 40px;
 $max-container: 1440px;
 
@@ -362,9 +362,9 @@ $max-container: 1440px;
                                     color: $primary-open-sky-t3;
                                     padding-left: 10px;
                                     &.in-category {
-                                        color: #006D97;
+                                        color: #00796B;
                                         text-decoration: underline;
-                                        text-decoration-color: #006D97;
+                                        text-decoration-color: #00796B;
                                         text-decoration-thickness: 2px;
                                         text-underline-offset: 6px;
                                     }
@@ -470,7 +470,8 @@ $max-container: 1440px;
                                                 outline: 0;
                                             }
                                             &:focus + .top-banner-search--field-with-results--field--wrapper--search-component--search-label .top-banner-search--field-with-results--field--wrapper--search-component--search-icon {
-                                                color: #0055A6;
+                                                color: white;
+                                                //color: #0055A6;
                                             }
                                         }
                                         > .top-banner-search--field-with-results--field--wrapper--search-component--search-spinner {
@@ -584,9 +585,9 @@ $max-container: 1440px;
                                                     line-height: 1.6;
                                                     font-weight: bold;
                                                     background: linear-gradient(rgb(238, 235, 238) 0%, rgb(238, 235, 238) 100%) repeat-x 0 100%/1px 1px;
-                                                    color: #0055a6;
+                                                    color: white;
                                                     font-size: 20px;
-                                                    text-decoration: #0055a6;
+                                                    text-decoration: fuchsia;
                                                     white-space: unset;
                                                     display: inline;
                                                     &:hover {
