--- a/_sass/color_schemes/opensearch.scss
+++ b/_sass/color_schemes/opensearch.scss
@@ -2,8 +2,8 @@
 // Brand colors
 //
 
-$blue-300: #0055A6;
-$blue-200: #005EB8; // Pacific Blue
+$blue-300: #004D40;//#0055A6;
+$blue-200: #004D40; // Pacific Blue
 $blue-100: #337EC6;
 $blue-000: #80AFDC;
 
@@ -52,20 +52,23 @@ $red-100: #DD4A69;
 $red-200: #AC3952;
 $red-300: #7B293B;
 
-$light-theme-navigation-background: #F1FBFF;
-$primary-deep-blue-sea-s3: #001E30;
+$light-theme-navigation-background: white;// #F1FBFF;
+$primary-deep-blue-sea-s3: #311B92;
 $primary-deep-blue-sea-t1: #2C5E7A;
 $primary-open-sky: #00A3E0;
-$primary-open-sky-s3: #003551;
-$primary-open-sky-s2: #006D97;
+$primary-open-sky-s3: #00796B;
+
+
+
+$primary-open-sky-s2: #00796B;
 $primary-open-sky-t1: #4FB3E3;
 $primary-open-sky-t2: #9BCFED;
 $primary-open-sky-t3: #E1F0F9;
-$primary-pacific-sky-t2: #DCEBF4;
+$primary-pacific-sky-t2: #e0f2f1;
 $primary-pacific-sky-t3: #F4F8FB;
 
 $body-background-color: $white;
-$sidebar-color: $grey-lt-000;
+$sidebar-color: #e0f2f1;
 $code-background-color: $grey-lt-000;
 
 $body-text-color: $grey-dk-200;
