Striked "Enterprise", corrected favicon

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,8 +1,8 @@
 <section class="os-banner">
     <header class="banner-head">
         <div class="banner-text-div">
-            <span class="banner-text-header">Eliatra OpenSearch Enterprise Distro Documentation</span>
-            <p class="banner-text-description">Learn to use EOED, the enterprise grade supported and maintained highly scalable software suite for search, analytics, observability, and other data-intensive applications.</p>
+            <span class="banner-text-header">Eliatra OpenSearch Distro Documentation</span>
+            <p class="banner-text-description">Learn to use EOD, the enterprise grade supported and maintained highly scalable software suite for search, analytics, observability, and other data-intensive applications.</p>
         </div>
         <div>
             <button id="contribute" class="btn-contribute"><span>Open<svg width="20" viewBox="0 0 24 24"><use xlink:href="#svg-arrow-right"></use></svg></span></button>
